# Chartify-Pro

./: .gitignore  Cargo.toml  MIGRATION.md  README.md  build.rs
.github/workflows/: build.yml
scripts/: package-macos.sh
src/: chart.rs  gui.rs  main.rs  pptx.rs
tests/fixtures/: multiple.csv  single.csv
