[package]
name = "chartify-pro"
version = "1.0.0"
edition = "2024"
authors = ["MurphySunrise"]
description = "Desktop statistical comparison and PowerPoint report generator"
repository = "https://github.com/MurphySunrise/Chartify-Pro"
homepage = "https://github.com/MurphySunrise/Chartify-Pro"
keywords = ["statistics", "powerpoint", "csv", "charts", "reporting"]
categories = ["visualization", "science"]

[dependencies]
anyhow = "1.0"
csv = "1.3"
eframe = { version = "0.34.3", default-features = false, features = ["default_fonts", "glow"] }
plotters = "0.3"
rayon = "1.10"
rfd = "0.17.2"
statrs = "0.18"
tempfile = "3.23"
zip = "2.4"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
